<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/bottom_sheet"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/bg_shape_top_corners"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/montserrat"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="18sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Title" />

            <TextView
                android:id="@+id/tv_release_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                app:layout_constraintEnd_toStartOf="@+id/view"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_title"
                tools:text="2018" />

            <TextView
                android:id="@+id/tv_runtime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/view"
                app:layout_constraintTop_toBottomOf="@+id/tv_title"
                tools:text="2h 3min" />

            <View
                android:id="@+id/view"
                android:layout_width="10dp"
                android:layout_height="10dp"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/shp_round_accent"
                app:layout_constraintBottom_toBottomOf="@+id/tv_release_date"
                app:layout_constraintEnd_toStartOf="@+id/tv_runtime"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_release_date"
                app:layout_constraintTop_toTopOf="@+id/tv_release_date" />

            <TextView
                android:id="@+id/tv_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/rating"
                android:textColor="@color/colorAccent"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_star"
                app:layout_constraintEnd_toStartOf="@+id/tv_popular"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_release_date" />

            <TextView
                android:id="@+id/tv_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto"
                android:text="@string/_0"
                android:textSize="18sp"
                app:drawableStartCompat="@drawable/ic_favorite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/tv_rating"
                app:layout_constraintTop_toBottomOf="@+id/tv_runtime" />

            <TextView
                android:id="@+id/tv_rating_count"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/_0"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_rating"
                app:layout_constraintStart_toStartOf="@+id/tv_rating"
                app:layout_constraintTop_toBottomOf="@+id/tv_rating" />

            <TextView
                android:id="@+id/text_popular"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/roboto"
                android:text="@string/popularity"
                android:textColor="@color/black"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="@+id/tv_popular"
                app:layout_constraintStart_toStartOf="@+id/tv_popular"
                app:layout_constraintTop_toBottomOf="@+id/tv_popular" />

            <LinearLayout
                android:id="@+id/chip_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_rating_count">

                <com.google.android.material.chip.ChipGroup
                    android:id="@+id/chip_group"
                    style="@style/Widget.MaterialComponents.ChipGroup"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />

            </LinearLayout>

            <TextView
                android:id="@+id/text_overview"
                style="@style/TextHeadline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/overview"
                app:layout_constraintStart_toEndOf="@+id/img_card_view"
                app:layout_constraintTop_toTopOf="@+id/img_card_view" />

            <androidx.cardview.widget.CardView
                android:id="@+id/img_card_view"
                android:layout_width="136dp"
                android:layout_height="184dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:cardCornerRadius="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/chip_container">

                <ImageView
                    android:id="@+id/img_poster"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/poster_movie"
                    tools:src="@color/colorAccent" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_overview"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp"
                android:fontFamily="@font/roboto"
                android:scrollbars="vertical"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="@+id/img_card_view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/img_card_view"
                app:layout_constraintTop_toBottomOf="@+id/text_overview"
                tools:text="Overview" />

            <TextView
                android:id="@+id/text_cast"
                style="@style/TextHeadline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/cast"
                app:layout_constraintStart_toStartOf="@id/img_card_view"
                app:layout_constraintTop_toBottomOf="@id/img_card_view" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_cast"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_cast"
                tools:listitem="@layout/item_cast" />

            <com.facebook.shimmer.ShimmerFrameLayout
                android:id="@+id/loading"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:layout_constraintTop_toTopOf="parent"
                app:shimmer_auto_start="true">

                <include layout="@layout/shimmer_effect_detail" />
            </com.facebook.shimmer.ShimmerFrameLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>
