<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="?attr/actionBarSize"
    android:gravity="center_vertical"
    app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp">

        <View
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/shp_round_accent" />

        <ImageView
            android:id="@+id/img_back"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_back"
            app:srcCompat="@drawable/ic_back" />
    </FrameLayout>

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp">

        <View
            android:layout_width="36dp"
            android:layout_height="36dp"
            android:background="@drawable/shp_round_accent" />

        <ImageView
            android:id="@+id/img_favorite"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_gravity="center"
            android:contentDescription="@string/image_favorite"
            app:srcCompat="@drawable/ic_favorite_border" />

    </FrameLayout>
</androidx.appcompat.widget.Toolbar>